--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,7 +1,7 @@
 FROM debian:testing
 
 RUN apt-get update \
-  && apt-get install -y --no-install-recommends gnupg dirmngr \
+  && apt-get install -y --no-install-recommends gnupg dirmngr time \
   && rm -rf /var/lib/apt/lists/* \
   && export GNUPGHOME="$(mktemp -d)" \
   && gpg --batch --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys 3FA7E0328081BFF6A14DA29AA6A19B38D3D831EF \
