--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -16,19 +16,23 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
+  nim:
     runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
 
-      # Runs a single command using the runners shell
       - name: Build docker images
-        run: ./build-docker.sh
+        run: ./build-docker.sh nim
 
-      # Runs a set of commands using the runners shell
       - name: Run one container
         run: ./run-container.sh nim
+  go:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Build docker images
+        run: ./build-docker.sh go
+
+      - name: Run one container
+        run: ./run-container.sh go
