Make the move to JS instead of shell

--- a/Dockerfile.nix.perf
+++ b/Dockerfile.nix.perf
@@ -1,5 +1,5 @@
 FROM nixos/nix:latest
 
-RUN nix-env -iA nixpkgs.linuxPackages.perf
+RUN nix-env -iA nixpkgs.linuxPackages.perf nixpkgs.nodejs
 
 ENTRYPOINT [ "/bin/bash" ]
