--- a/docker/nix/Dockerfile.nix.elixir.docker
+++ b/docker/nix/Dockerfile.nix.elixir.docker
@@ -2,6 +2,7 @@ FROM language-bench-nix/perf
   
   WORKDIR /app
   ENV BENCHMARKED_LANG elixir
+  ENV OS nix
   
   RUN nix-env -iA nixpkgs.elixir
   COPY ./package.json ./package.json
