--- a/docker/nix/Dockerfile.nix.rust.docker
+++ b/docker/nix/Dockerfile.nix.rust.docker
@@ -2,6 +2,7 @@ FROM language-bench-nix/perf
   
   WORKDIR /app
   ENV BENCHMARKED_LANG rust
+  ENV OS nix
   
   RUN nix-env -iA nixpkgs.rustc nixpkgs.gcc nixpkgs.cargo
   COPY ./package.json ./package.json
