--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "tiny-glob": "^0.2.8"
   },
   "devDependencies": {
-    "jest": "^26.6.3"
+    "jest": "^26.6.3",
+    "js-yaml": "^4.1.0"
   }
 }
