--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -17,6 +17,15 @@ jobs:
         run: ./build-docker.sh zig
       - name: Run one container
         run: ./run-container.sh zig
+      - name: Commit results
+        run:
+          - git config --global user.name 'Your Name'
+          - >-
+            git config --global user.email
+            'your-username@users.noreply.github.com'
+          - git add ./results
+          - git commit -m "Results update for zig"
+          - git push
   rust:
     runs-on: ubuntu-latest
     steps:
@@ -25,6 +34,15 @@ jobs:
         run: ./build-docker.sh rust
       - name: Run one container
         run: ./run-container.sh rust
+      - name: Commit results
+        run:
+          - git config --global user.name 'Your Name'
+          - >-
+            git config --global user.email
+            'your-username@users.noreply.github.com'
+          - git add ./results
+          - git commit -m "Results update for rust"
+          - git push
   go:
     runs-on: ubuntu-latest
     steps:
@@ -33,6 +51,15 @@ jobs:
         run: ./build-docker.sh go
       - name: Run one container
         run: ./run-container.sh go
+      - name: Commit results
+        run:
+          - git config --global user.name 'Your Name'
+          - >-
+            git config --global user.email
+            'your-username@users.noreply.github.com'
+          - git add ./results
+          - git commit -m "Results update for go"
+          - git push
   nim:
     runs-on: ubuntu-latest
     steps:
@@ -41,6 +68,15 @@ jobs:
         run: ./build-docker.sh nim
       - name: Run one container
         run: ./run-container.sh nim
+      - name: Commit results
+        run:
+          - git config --global user.name 'Your Name'
+          - >-
+            git config --global user.email
+            'your-username@users.noreply.github.com'
+          - git add ./results
+          - git commit -m "Results update for nim"
+          - git push
   elixir:
     runs-on: ubuntu-latest
     steps:
@@ -49,3 +85,12 @@ jobs:
         run: ./build-docker.sh elixir
       - name: Run one container
         run: ./run-container.sh elixir
+      - name: Commit results
+        run:
+          - git config --global user.name 'Your Name'
+          - >-
+            git config --global user.email
+            'your-username@users.noreply.github.com'
+          - git add ./results
+          - git commit -m "Results update for elixir"
+          - git push
