--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -23,6 +23,7 @@ jobs:
                       git config --global user.email 'your-username@users.noreply.github.com'
                       git add ./results
                       git commit -m "Results update for zig"
+                      git pull
                       git push
                     
   rust:
@@ -39,6 +40,7 @@ jobs:
                       git config --global user.email 'your-username@users.noreply.github.com'
                       git add ./results
                       git commit -m "Results update for rust"
+                      git pull
                       git push
                     
   go:
@@ -55,6 +57,7 @@ jobs:
                       git config --global user.email 'your-username@users.noreply.github.com'
                       git add ./results
                       git commit -m "Results update for go"
+                      git pull
                       git push
                     
   nim:
@@ -71,6 +74,7 @@ jobs:
                       git config --global user.email 'your-username@users.noreply.github.com'
                       git add ./results
                       git commit -m "Results update for nim"
+                      git pull
                       git push
                     
   elixir:
@@ -87,5 +91,6 @@ jobs:
                       git config --global user.email 'your-username@users.noreply.github.com'
                       git add ./results
                       git commit -m "Results update for elixir"
+                      git pull
                       git push
                     
