--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -17,18 +17,10 @@ jobs:
         run: ./build-docker.sh zig
       - name: Run one container
         run: ./run-container.sh zig
-      - name: Configurate git
-        run: |-
-          git config --global user.name 'zig bot'
-                      git config --global user.email 'your-username@users.noreply.github.com'
-                      git config pull.rebase false
-                    
-      - name: Commit results
-        run: |-
-          git add ./results
-                      git commit -m "Results update for zig"
-                      while ! git push; do git pull; done
-                    
+      - uses: actions/upload-artifact@v2
+        with:
+          name: results
+          path: results/
   rust:
     runs-on: ubuntu-latest
     steps:
@@ -37,18 +29,10 @@ jobs:
         run: ./build-docker.sh rust
       - name: Run one container
         run: ./run-container.sh rust
-      - name: Configurate git
-        run: |-
-          git config --global user.name 'rust bot'
-                      git config --global user.email 'your-username@users.noreply.github.com'
-                      git config pull.rebase false
-                    
-      - name: Commit results
-        run: |-
-          git add ./results
-                      git commit -m "Results update for rust"
-                      while ! git push; do git pull; done
-                    
+      - uses: actions/upload-artifact@v2
+        with:
+          name: results
+          path: results/
   go:
     runs-on: ubuntu-latest
     steps:
@@ -57,18 +41,10 @@ jobs:
         run: ./build-docker.sh go
       - name: Run one container
         run: ./run-container.sh go
-      - name: Configurate git
-        run: |-
-          git config --global user.name 'go bot'
-                      git config --global user.email 'your-username@users.noreply.github.com'
-                      git config pull.rebase false
-                    
-      - name: Commit results
-        run: |-
-          git add ./results
-                      git commit -m "Results update for go"
-                      while ! git push; do git pull; done
-                    
+      - uses: actions/upload-artifact@v2
+        with:
+          name: results
+          path: results/
   nim:
     runs-on: ubuntu-latest
     steps:
@@ -77,18 +53,10 @@ jobs:
         run: ./build-docker.sh nim
       - name: Run one container
         run: ./run-container.sh nim
-      - name: Configurate git
-        run: |-
-          git config --global user.name 'nim bot'
-                      git config --global user.email 'your-username@users.noreply.github.com'
-                      git config pull.rebase false
-                    
-      - name: Commit results
-        run: |-
-          git add ./results
-                      git commit -m "Results update for nim"
-                      while ! git push; do git pull; done
-                    
+      - uses: actions/upload-artifact@v2
+        with:
+          name: results
+          path: results/
   elixir:
     runs-on: ubuntu-latest
     steps:
@@ -97,15 +65,31 @@ jobs:
         run: ./build-docker.sh elixir
       - name: Run one container
         run: ./run-container.sh elixir
+      - uses: actions/upload-artifact@v2
+        with:
+          name: results
+          path: results/
+  commit results:
+    runs-on: ubuntu-latest
+    needs:
+      - zig
+      - rust
+      - go
+      - nim
+      - elixir
+    steps:
+      - uses: actions/download-artifact@v2
+        with:
+          name: results
       - name: Configurate git
         run: |-
-          git config --global user.name 'elixir bot'
-                      git config --global user.email 'your-username@users.noreply.github.com'
-                      git config pull.rebase false
-                    
+          git config --global user.name 'Benchmark bot'
+                    git config --global user.email 'your-username@users.noreply.github.com'
+                    git config pull.rebase false
+                  
       - name: Commit results
         run: |-
           git add ./results
-                      git commit -m "Results update for elixir"
-                      while ! git push; do git pull; done
-                    
+                    git commit -m "Benchmark result update"
+                    while ! git push; do git pull; done
+                  
