--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -69,7 +69,7 @@ jobs:
         with:
           name: results
           path: results/
-  commit results:
+  commit_results:
     runs-on: ubuntu-latest
     needs:
       - zig
