--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -78,6 +78,7 @@ jobs:
       - nim
       - elixir
     steps:
+      - uses: actions/checkout@v2
       - uses: actions/download-artifact@v2
         with:
           name: results
