--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -94,4 +94,19 @@ jobs:
           git add ./results
                     git commit -m "Benchmark result update"
                     while ! git push; do git pull; done
+  deploy:
+    runs-on: ubuntu-latest
+    needs: 
+      - commit_results
+    steps:
+      - uses: actions/checkout@v2
+      - name: Build
+        run: npm run predeploy
+
+      - name: Deploy
+        uses: peaceiris/actions-gh-pages@v3
+        if: github.ref == 'refs/heads/main'
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./build
                   
