Add install step

--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -100,6 +100,8 @@ jobs:
       - commit_results
     steps:
       - uses: actions/checkout@v2
+      - name: Install dependencies
+        run: npm i
       - name: Build
         run: npm run predeploy
 
