--- a/docker/nix/Dockerfile.nix.go.docker
+++ b/docker/nix/Dockerfile.nix.go.docker
@@ -10,6 +10,7 @@ FROM language-bench-nix/perf
   
   COPY ./benchmarks-source ./benchmarks-source
   COPY ./languages.json ./languages.json
-  # VOLUME ./results /app/results
+  COPY ./public ./public
+  # VOLUME ./public/results /app/public/results
   
   ENTRYPOINT ["./benchmarks-source/run.js"]
