--- a/package.json
+++ b/package.json
@@ -23,13 +23,16 @@
     "url": "https://github.com/gabjauf/benchmarks/issues"
   },
   "dependencies": {
-    "tiny-glob": "^0.2.8",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "chart.js": "^3.3.2",
     "react": "^17.0.2",
+    "react-chartjs-2": "^3.0.3",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "tiny-glob": "^0.2.8",
     "web-vitals": "^1.1.2"
   },
   "devDependencies": {
