--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -20,7 +20,7 @@ jobs:
       - uses: actions/upload-artifact@v2
         with:
           name: results
-          path: results/**/*zig.json
+          path: public/results/**/*zig.json
   rust:
     runs-on: ubuntu-latest
     steps:
@@ -32,7 +32,7 @@ jobs:
       - uses: actions/upload-artifact@v2
         with:
           name: results
-          path: results/**/*rust.json
+          path: public/results/**/*rust.json
   go:
     runs-on: ubuntu-latest
     steps:
@@ -44,7 +44,7 @@ jobs:
       - uses: actions/upload-artifact@v2
         with:
           name: results
-          path: results/**/*go.json
+          path: public/results/**/*go.json
   nim:
     runs-on: ubuntu-latest
     steps:
@@ -56,7 +56,7 @@ jobs:
       - uses: actions/upload-artifact@v2
         with:
           name: results
-          path: results/**/*nim.json
+          path: public/results/**/*nim.json
   elixir:
     runs-on: ubuntu-latest
     steps:
@@ -68,7 +68,7 @@ jobs:
       - uses: actions/upload-artifact@v2
         with:
           name: results
-          path: results/**/*elixir.json
+          path: public/results/**/*elixir.json
   commit_results:
     runs-on: ubuntu-latest
     needs:
@@ -82,7 +82,7 @@ jobs:
       - uses: actions/download-artifact@v2
         with:
           name: results
-          path: results/
+          path: public/results/
       - name: Configurate git
         run: |-
           git config --global user.name 'Benchmark bot'
@@ -91,12 +91,13 @@ jobs:
                   
       - name: Commit results
         run: |-
-          git add ./results
+          git add ./public/results
                     git commit -m "Benchmark result update"
                     while ! git push; do git pull; done
+                  
   deploy:
     runs-on: ubuntu-latest
-    needs: 
+    needs:
       - commit_results
     steps:
       - uses: actions/checkout@v2
@@ -104,11 +105,9 @@ jobs:
         run: npm i
       - name: Build
         run: npm run predeploy
-
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         if: github.ref == 'refs/heads/master'
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./build
-                  
