--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -83,6 +83,8 @@ jobs:
         with:
           name: results
           path: public/results/
+      - name: Deendency install
+        run: npm i
       - name: Compute Stats
         run: node ./benchmarks-source/compute-stats.js
       - name: Configurate git
