--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-transition-group": "^4.4.2",
     "tiny-glob": "^0.2.8",
     "web-vitals": "^1.1.2"
   },
