--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -97,8 +97,8 @@ jobs:
       - name: Commit results
         run: |-
           git add ./public/results
-                    git commit -m "Benchmark result update"
-                    while ! git push; do git pull; done
+                    git diff --quiet && git diff --staged --quiet || git commit -m "Benchmark result update"
+                    git diff --quiet && while ! git push; do git pull; done
                   
   deploy:
     runs-on: ubuntu-latest
