--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -98,7 +98,7 @@ jobs:
         run: |-
           git add ./public/results
                     git diff --quiet && git diff --staged --quiet || git commit -m "Benchmark result update"
-                    git diff --quiet && while ! git push; do git pull; done
+                    while ! git push; do git pull; done
                   
   deploy:
     runs-on: ubuntu-latest
