--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -84,8 +84,8 @@ jobs:
         with:
           name: results
           path: public/results/
-      - name: Deendency install
-        run: npm i
+      - name: Dependency install
+        run: npm run ci
       - name: Compute Stats
         run: node ./benchmarks-source/compute-stats.js
       - name: Configurate git
@@ -98,8 +98,8 @@ jobs:
         run: |-
           git add ./public/results
                     git diff --quiet && git diff --staged --quiet || git commit -m "Benchmark result update"
-                    while ! git push; do git pull; done
-                  
+      - name: Publish results
+        run: while ! git push; do git pull; done
   deploy:
     runs-on: ubuntu-latest
     needs:
