--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -97,7 +97,7 @@ jobs:
       - name: Commit results
         run: |-
           git add ./public/results
-                    git diff --quiet && git diff --staged --quiet || git commit -m "Benchmark result update"
+                    git diff --quiet ./public/results && git diff --staged --quiet ./public/results || git commit -m "Benchmark result update"
       - name: Publish results
         run: while ! git push; do git pull; done
   deploy:
