--- a/package.json
+++ b/package.json
@@ -23,39 +23,9 @@
     "url": "https://github.com/gabjauf/benchmarks/issues"
   },
   "dependencies": {
-    "@testing-library/jest-dom": "^5.12.0",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
-    "chart.js": "^3.3.2",
-    "react": "^17.0.2",
-    "react-chartjs-2": "^3.0.3",
-    "react-dom": "^17.0.2",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
-    "react-transition-group": "^4.4.2",
-    "tiny-glob": "^0.2.8",
-    "web-vitals": "^1.1.2"
+    "tiny-glob": "^0.2.8"
   },
   "devDependencies": {
-    "gh-pages": "^3.2.0",
     "js-yaml": "^4.1.0"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
   }
 }
