--- a/docker/nix/Dockerfile.nix.elixir.docker
+++ b/docker/nix/Dockerfile.nix.elixir.docker
@@ -10,7 +10,6 @@ FROM language-bench-nix/perf
   
   COPY ./benchmarks-source ./benchmarks-source
   COPY ./languages.json ./languages.json
-  COPY ./public ./public
-  # VOLUME ./public/results /app/public/results
+  COPY ./results ./results
   
   ENTRYPOINT ["./benchmarks-source/run.js"]
